--- a/src/app/main/main-page/main-page.component.html
+++ b/src/app/main/main-page/main-page.component.html
@@ -42,7 +42,7 @@
 
     <div class="col-lg-10 col-12 p0"  *ngIf="(sb.small||sb.xs)">
       <div class="mx-3 fh ">
-        <mat-card class="fw fh p0">
+        <mat-card class="fw fh p0" color = "primary">
           <app-carousel-products [products] = "productsFromPromosWithTimer()"
           [nums] = "2"
           [interval_time]="0.01"
@@ -142,9 +142,9 @@
 </div>
 
 <!-- TODO delete this at the end put a footer instead of it -->
-<div class="fw" style="height: 200px;">
+<!-- <div class="fw" style="height: 200px;">
 
-</div>
+</div> -->
 
 
 
