--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,6 @@
+@import "../../node_modules/bootstrap/dist/css/bootstrap.css";
+
+
 app-header{
   width: 100%;
   height:auto;
@@ -10,6 +13,7 @@ app-header{
 
 /* TODO check if the css below here is ok */
 mat-sidenav-content, mat-sidenav-container{
-  height: 100%;
-  max-height: auto;
+  /* height: 100%;
+  max-height: auto; */
+  height: auto !important;
 }
