--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,18 @@
 
-<mat-sidenav-container style="width: 100%; padding: 0px; margin: 0px;">
+<!-- The main purpose of these inline stylings is to remind how to add empty content when the page is not full -->
+
+<mat-sidenav-container style="min-height: 100%;display: flex; flex-direction: column;width: 100%; padding: 0px; margin: 0px;">
   <mat-sidenav style="width:50vw" [mode] = "'over'" #side_nav>
     <app-navbar></app-navbar>
   </mat-sidenav>
   <!-- TODO Decide To Add a size limit like digi kala site and make it more dynamice for smaller sizes -->
-  <mat-sidenav-content>
-    <app-header [sidenav] = "side_nav" ></app-header>
-    <router-outlet></router-outlet>
+  <mat-sidenav-content style="min-height: 100%;display: flex; flex-direction: column;">
+    <app-header  [sidenav] = "side_nav"  ></app-header>
+    <!-- note that if you wanted to make the navbar fixed to the top you can get rid of the margin issue by making an empty div or a hidden nav, the first one is better, and then make that like a normal element -->
+    <div style="flex-grow: 1">
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
 
