--- a/src/app/core/header/header-hand/header-hand.component.html
+++ b/src/app/core/header/header-hand/header-hand.component.html
@@ -38,7 +38,7 @@
       <div class="mx-3" style="margin: 0px" >
         <mat-form-field class="fw" appearance="fill">
           <mat-label>Search</mat-label>
-          <input matInput placeholder="Search">
+          <input matInput>
           <mat-icon matSuffix>search</mat-icon>
           <!-- <mat-hint>Hint</mat-hint> -->
         </mat-form-field>
