--- a/src/app/shared-materials/carousel-products/carousel-products.component.css
+++ b/src/app/shared-materials/carousel-products/carousel-products.component.css
@@ -15,6 +15,8 @@
 .flx-container{
   display: flex !important;
   flex-direction: row !important;
+  /* The line bellow is to make diffrent items have the same height */
+  align-items: stretch !important;
   /* overflow: scroll; */
 }
 
