--- a/src/app/shared-materials/shared-button-raised/shared-button-raised.component.html
+++ b/src/app/shared-materials/shared-button-raised/shared-button-raised.component.html
@@ -1,3 +1,4 @@
-<button style="width: 100%" mat-raised-button [color] = "color" class="wrapping">
+<button [matBadge] = "matB" [matBadgeColor]="'warn'" [matBadgePosition]="matBp"
+[style.width] = "width" [style.height] = "height" mat-raised-button [color] = "color" class="wrapping">
   <ng-content></ng-content>
 </button>
