--- a/src/app/shared-materials/shared-button-stroked/shared-button-stroked.component.html
+++ b/src/app/shared-materials/shared-button-stroked/shared-button-stroked.component.html
@@ -1,3 +1,3 @@
-<button [style.width]="width" class="wrapping" mat-stroked-button [color] = "color">
+<button [style.height]="height" [style.width] = "width" class="wrapping" mat-stroked-button [color] = "color">
   <ng-content></ng-content>
 </button>
