--- a/src/app/user/user-options/user-options.component.html
+++ b/src/app/user/user-options/user-options.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 
 <a [routerLink] = "['detail']" style="width: 100%" routerLinkActive #rld = "routerLinkActive">
-  <app-shared-button-raised color = "warn"style="width: 100%" *ngIf="rld.isActive"> Detail </app-shared-button-raised>
+  <app-shared-button-raised color = "accent"style="width: 100%" *ngIf="rld.isActive"> Detail </app-shared-button-raised>
   <app-shared-button-stroked style="width: 100%" *ngIf="! rld.isActive"> Detail </app-shared-button-stroked>
 </a>
 
@@ -11,7 +11,7 @@
 </a> -->
 
 <a class="mt-3" [routerLink] = "['invoices']" style="width: 100%" routerLinkActive #rlo = "routerLinkActive">
-  <app-shared-button-raised color = "warn" style="width: 100%" *ngIf="rlo.isActive"> Invoices </app-shared-button-raised>
+  <app-shared-button-raised color = "accent" style="width: 100%" *ngIf="rlo.isActive"> Invoices </app-shared-button-raised>
   <app-shared-button-stroked style="width: 100%" *ngIf="!rlo.isActive"> Invoices </app-shared-button-stroked>
 </a>
 
