--- a/src/styles.css
+++ b/src/styles.css
@@ -6,17 +6,32 @@
 
 html{
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   padding: 0px;
   margin: 0px;
 }
 
 body{
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   padding: 0px;
   margin: 0px;
-  /* background: blue; */
+}
+app-root{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* display: block;
+  height: 100% !important; */
+  /* background: blue !important; */
+  /* width: 100% !important;
+  margin: 0px;
+  padding: 0px; */
+
 }
 
 /* body{
@@ -91,13 +106,6 @@ body{
   }
 }
 
-app-root{
-  width: 100% !important;
-  height: 100% !important;
-  margin: 0px;
-  padding: 0px;
-}
-
 
 
 
@@ -153,6 +161,11 @@ app-root{
   .my-icon{
     font-size: 3rem;
   }
+  .auto-wrap{
+    white-space: pre-wrap;
+    font-size: 0.9rem;
+  }
+
 }
 
 /* SM */
@@ -160,6 +173,11 @@ app-root{
   .my-icon{
     font-size: 4rem;
   }
+  .auto-wrap{
+    white-space: pre-wrap;
+    font-size: 1.1rem;
+  }
+
 }
 
 /* MD */
@@ -167,6 +185,11 @@ app-root{
   .my-icon{
     font-size: 5rem;
   }
+  .auto-wrap{
+    white-space: pre-wrap;
+    font-size: 1.2rem;
+  }
+
 }
 
 /* LG */
@@ -174,6 +197,11 @@ app-root{
   .my-icon{
     font-size: 5.5rem;
   }
+  .auto-wrap{
+    white-space: pre-wrap;
+    font-size: 1.5rem;
+  }
+
 }
 
 
@@ -182,6 +210,22 @@ app-root{
   .my-icon{
     font-size: 6rem;
   }
+  .auto-wrap{
+    white-space: pre-wrap;
+    font-size: 2rem;
+  }
+
+}
+
+
+
+/* TODO Manuall material css should be desolved */
+.accentB{
+  background: #303f9f;
+}
+
+.accentC{
+  color: #303f9f;
 }
 
 
