--- a/src/app/core/header/header-lap/auth-dialogue/sign-up/sign-up.component.html
+++ b/src/app/core/header/header-lap/auth-dialogue/sign-up/sign-up.component.html
@@ -30,7 +30,7 @@
 
     <div class="col-12" >
       <div class="mx-5">
-        <button color = 'accent' mat-raised-button>
+        <button (click)="register()"  color = 'accent' mat-raised-button>
           Sign Me Up
         </button>
       </div>
