--- a/src/app/core/header/header-lap/header-lap.component.html
+++ b/src/app/core/header/header-lap/header-lap.component.html
@@ -38,7 +38,7 @@
 
             <div class="col-6 p0 auto-wrap centrifyr" >
               <div class="ml-3 fh centrifyr txs fw"  >
-                <app-shared-button-flat   [height]="'50%'"
+                <app-shared-button-flat (click)="openDialouge()"    [height]="'50%'"
                 color="accent"  class="fw fh centrifyr">
                   <div class="button-detail">
                       <i class="material-icons auto-wrap">account_circle</i> Login
