--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -1,14 +1,15 @@
 
 
 <div class="row" *ngIf= "user">
-  <div class="col-4">
-    <img class="img-fluid" [src]="user.image_profile ? user.image_profile : brandService.EMPTY_USERS_PROFILE_PIC" >
+  <div class="col-lg-4 col-md-6 col-12">
+    <img class="img-fluid mt-3" [src]="user.image_profile ? user.image_profile : brandService.EMPTY_USERS_PROFILE_PIC" >
   </div>
-  <div class="col-8">
+  <div class="col-lg-8 col-md-6 col-12">
 
     <div class="row ">
 
-      <div class="col-12">
+      <div class="col-12 mt-3">
+
         <mat-form-field>
           <input matInput placeholder = "name" [value]="user.name">
         </mat-form-field>
@@ -26,7 +27,7 @@
       <div class="col-12 mt-3">
 
         <mat-form-field>
-          <input matInput placeholder = "email" email [value]="user.emails[0]">
+          <input matInput placeholder = "email" email [value]="user.email">
         </mat-form-field>
 
       </div>
@@ -34,7 +35,7 @@
 
       <div class="col-6 mt-3">
         <div>
-          <app-shared-button-raised [color] = "'primary'" >Save</app-shared-button-raised>
+          <app-shared-button-raised [color] = "'accent'" >Save</app-shared-button-raised>
         </div>
       </div>
 
