--- a/src/app/user/user-invoices/user-invoices.component.html
+++ b/src/app/user/user-invoices/user-invoices.component.html
@@ -1,3 +1,53 @@
-<p>
-  user-invoices works!
-</p>
+
+
+<table mat-table [dataSource]="dataSource" multiTemplateDataRows  class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+  <!-- <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> No. </th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container> -->
+
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="number_of_products">
+    <th mat-header-cell *matHeaderCellDef> Number Of Products </th>
+    <td mat-cell *matCellDef="let element"> {{element.number_of_products}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="state">
+    <th mat-header-cell *matHeaderCellDef> State </th>
+    <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="total_price">
+    <th mat-header-cell *matHeaderCellDef> Total Price </th>
+    <td mat-cell *matCellDef="let element"> {{element.total_price}} </td>
+  </ng-container>
+
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row (click)="go_to_invoice(element)"  *matRowDef="let element; columns: displayedColumns;"></tr>
+
+</table>
+
+
+
+
+
+
+
+
+<!--
+
+<div style="height: 10000px; width: 10px;"></div>
+
+
+
+ -->
