--- a/src/app/user/invoice/invoice.component.html
+++ b/src/app/user/invoice/invoice.component.html
@@ -1,9 +1,44 @@
 
 
+<div class="container">
+  <mat-card class="fw mt-3">
+    <div class="container-fluid">
+      <div class="row p0">
+
+        <div class="col-12 p0" *ngFor="let prod of viewed_invoice.products">
+
+
+          <div class="container-fluid">
+            <div class="row p0">
+
+              <div class="col-lg-3 col-md-6 col-12 mt-3">
+                <img [src]="prod.image_address[0]" class = "fw">
+              </div>
+
+              <div class="col-lg-3 col-md-2 col-4 mt-3 centrifyc">
+                Name  : {{prod.name}}
+              </div>
+
+              <div class="col-lg-3 col-md-2 col-4 mt-3 centrifyc">
+                Price : {{prod.promo_code ? prod.main_price * (1-prod.promo_code.percent) : prod.main_price }} $ CAD
+              </div>
+
+              <div class="col-lg-3 col-md-2 col-4 mt-3 centrifyc">
+                Description : {{prod.detail.length > 60 ? prod.detail.slice(0, 60) + '...' : prod.detail}}
+              </div>
 
 
 
 
 
+            </div>
+          </div>
 
+          <hr>
+        </div>
+
+      </div>
+    </div>
+  </mat-card>
+</div>
 
